# merkury

./: .gitignore  LICENSE  MANIFEST.in  README.md  _config_local.yml  formatting.md  index.md  plotting.md  pyproject.toml  requirements.txt  setup.py
examples/: altair.html  altair.py  bokeh.html  bokeh.py  intro-py.html  intro-py.py  intro-sql.html  intro-sql.sql  intro.html  intro.py  matplotlib.html  matplotlib.py  plotly.html  plotly.py
merkury/: main.py  renderer.py  runner.py  runner_py.py  runner_sql.py  utils.py
merkury/assets/: pico.min.css  prism.js
merkury/templates/: template.html  template.md
merkury/templates/assets/: merkury-tables.js  merkury.css  merkury.js  prism-default.css  prism-night.css  prism.js
src/merkury/: renderer.py
src/merkury/templates/: template.html  template.md
src/merkury/templates/assets/: merkury-themes.js  merkury.css  prism-default.css  prism-night.css  prism.js
tests/: script.py  script.sql  test_renderer.py  test_runner.py  test_utils.py
